<resources>
    <string name="app_name">BitFit</string>
    <string name="addFoodButton">Add New Food</string>
    <string name="food">Food:</string>
    <string name="foodEditText">Enter Food Name</string>
    <string name="calories">Calories:</string>
    <string name="caloriesEditText">Calories</string>
    <string name="recordButton">Record This Food</string>
    <string name="log">Log</string>
    <string name="dashboard">Dashboard</string>
    <string name="avg">Average Calories:</string>
    <string name="min">Minimum Calories:</string>
    <string name="max">Maximum Calories:</string>


</resources>